# GAIA

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  gaia  gaia.ps1  package-lock.json  package.json
bugs/: BUG-002_telemetry_reporting.md
certs/: ca.srl  server.csr  test-agent.csr
docs/: design.md
docs/guides/: building-adapters.md  building-agents.md  configuration.md  deployment.md  getting-started.md  security-deployment.md
docs/protocols/: a2a-integration.md  mcp-integration.md  native-protocol.md
docs/reference/: coding-guidelines.md  error-codes.md  event-catalog.md  glossary.md
docs/rfcs/: 000-template.md
docs/site/docs/: api-reference.md  intro.md
docs/specs/: agent-api.md  client-api.md  communication.md  control-loop.md  failure-handling.md  lifecycles.md  planning.md  registry.md  schemas.md  security.md  state-management.md  tech-stack.md  transport.md
docs/specs/schemas/: agent-manifest.json  async-completion.json  event.json  request.json  (+3 more)
libs/sdk-py/: pyproject.toml
libs/sdk-py/gaia/: __init__.py  agent.py  client.py  models.py  stream.py
libs/sdk-py/gaia/models/: __init__.py  agent_manifest.py  async_completion.py  event.py  request.py  response.py  step.py  task.py
libs/sdk-py/scripts/: generate_models.py
libs/sdk-ts/: package.json  tsconfig.json
scripts/: init.sh
scripts/gaia/: gaia.sh  generate_certs.sh  stress_test.py  validate_state.py
src/dashboard/: package-lock.json  package.json
src/kernel/: .gitignore  .policy_test_scratch.go.bak  go.mod  go.sum  main.go
(+93 files in other folders)
