[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gaia-sdk"
version = "0.1.0"
description = "The official GAIA Python SDK for building and connecting agents."
authors = [
    { name = "GAIA Contributors" }
]
dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0"
]
